--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "data-fns": "^0.1.8",
+    "date-fns": "^2.22.1",
+    "gray-matter": "^4.0.3",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
+    "sass": "^1.35.2"
   },
   "devDependencies": {
     "eslint": "7.30.0",
