--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    env:
+        NEXT_PUBLIC_BASE_PATH: https://meylism.github.io/personal-website/
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
