CNAME configs added

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,8 +28,8 @@ jobs:
         run: npm run build && npm run export && touch ./out/.nojekyll
 
       - name: Create a CNAME record
-        run: touch ./out./CNAME && echo "meylism.com" >> ./out/CNAME
-        
+        run: touch ./out/CNAME && echo "meylism.com" >> ./out/CNAME
+
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
