--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "data-fns": "^0.1.8",
     "date-fns": "^2.22.1",
     "gray-matter": "^4.0.3",
-    "next": "11.0.1",
+    "next": "^11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remark": "^13.0.0",
